src/backends/wrf/WRFConfigBridge.hpp

//============================================================================
// WRFDA Initialization Functions
//============================================================================

/**
 * @brief Initialize WRFU (WRF ESMF time utilities)
 *
 * @details Initializes the WRFU time manager with Gregorian calendar.
 * Must be called between wrfda_init_modules_(1) and wrfda_init_modules_(2).
 */
void wrfda_wrfu_initialize_();
/**
 * @brief Initialize WRFDA modules
 *
 * @param[in] phase Initialization phase (1 or 2)
 * @details Phase 1 initializes core modules (configuration and constants),
 * Phase 2 initializes advanced features. Domain management is handled
 * separately by WRFDA itself.
 */
void wrfda_init_modules_(int phase);
/**
 * @brief Check if WRFDA has been initialized
 *
 * @return bool True if WRFDA modules have been initialized
 */
bool wrfda_is_initialized_();
/**
 * @brief Initialize WRF configuration by reading namelist.input (serial
 * version)
 *
 * @details This function calls WRF's initial_config() subroutine which:
 * - Opens and reads namelist.input file
 * - Populates the module-level model_config_rec structure
 * - Validates configuration parameters
 *
 * This must be called before any WRF operations that require configuration.
 *
 * @note The namelist.input file must exist in the current working directory
 * @note This populates the module-level model_config_rec in module_configure
 * @note For parallel MPI runs, use wrf_initial_config_parallel_() instead
 */
void wrf_initial_config_();
/**
 * @brief Initialize WRF configuration with parallel support (following
 * da_wrfvar_init1.inc)
 *
 * @details This function implements the parallel initialization sequence from
 * WRFDA:
 * - In parallel mode (DM_PARALLEL): calls initial_config only on rootproc,
 *   then broadcasts config buffer to all processes using wrf_dm_bcast_bytes,
 *   sets config from buffer on all processes, and initializes domain manager
 * - In serial mode: calls initial_config on all processes
 *
 * This matches the exact sequence from WRFDA's da_wrfvar_init1.inc lines 75-85.
 *
 * @note The namelist.input file must exist in the current working directory
 * @note This populates the module-level model_config_rec in module_configure
 * @note This function should be used instead of wrf_initial_config_() when
 * running with MPI support to ensure proper configuration synchronization
 */
void wrf_initial_config_parallel_();
/**
 * @brief Set WRF domain manager communicator from METADA's MPI communicator
 * @param[in] mpi_comm MPI communicator (typically MPI_COMM_WORLD)
 * @details This function passes the MPI communicator from METADA to WRF's
 *          domain manager. It should be called after MPI is initialized
 *          in METADA but before any WRFDA parallel operations.
 * @note When MPI is disabled, this is a no-op
 */
void wrf_set_dm_communicator_from_metada_(int mpi_comm);
/**
 * @brief Convert model config to domain-specific grid config
 *
 * @details This function calls WRF's model_to_grid_config_rec() subroutine
 * which extracts configuration for a specific domain from the model-wide
 * configuration and stores it in the module-level config_flags_ variable.
 *
 * @param[in] domain_id Domain ID (1-based, typically 1 for outermost domain)
 *
 * @pre wrf_initial_config_() must have been called first
 * @post Module-level config_flags_ contains domain-specific configuration
 *
 * @note This function is called during initialization for WRF internal
 * consistency. Map projection parameters should be obtained from WRFGeometry
 * which reads them from NetCDF file global attributes (the authoritative
 * source).
 */
void wrf_model_to_grid_config_(const int* domain_id);
//============================================================================
// WRFDA Domain Allocation and Management
//============================================================================

/**
 * @brief Allocate and initialize WRFDA domain following standard workflow
 *
 * @param[in] domain_id Domain ID (typically 1 for single-domain)
 * @return int Error code (0 = success, non-zero = error)
 *
 * @details Follows the exact sequence from da_wrfvar_init2.inc:
 * 1. alloc_and_configure_domain (allocates head_grid)
 * 2. model_to_grid_config_rec (extracts domain config)
 * 3. set_scalar_indices_from_config (sets tracer indices)
 * 4. init_wrfio (initializes WRF I/O system)
 * 5. setup_timekeeping (sets up domain clock)
 *
 * @note This must be called after wrf_initial_config_()
 */
int wrfda_alloc_and_init_domain_(int domain_id);